--- a/MapBox/app/src/main/res/values/colors.xml
+++ b/MapBox/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#424242</color>
+    <color name="colorPrimaryDark">#212121</color>
+    <color name="colorAccent">#FFEB3B</color>
     <color name="orange">#FFB74D</color>
     <color name="mapboxWhite">#ffffff</color>
     <color name="mapboxBlue">#4264fb</color>
     <color name="mapboxGrayLight">#c6d2e1</color>
+    <color name="abc_primary_text_material_dark">#424242</color>
+    <color name="abc_secondary_text_material_dark">#212121</color>
 </resources>
