--- a/MapBox/app/src/main/res/values/styles.xml
+++ b/MapBox/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <!--<item name="orange">@color/orange</item>-->
+        <!--<item name="abc_primary_text_material_dark">@color/abc_primary_text_material_dark</item>-->
     </style>
 
 </resources>
